<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/app_name"
        android:textColor="@color/blue"
        android:textSize="32sp"
        android:textStyle="bold" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/vp_article"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="16dp"/>

    <LinearLayout
        android:id="@+id/dots"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"/>

    <!--region / Menu dzikir dan doa-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dashboard_menu"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_menu_dasboard"
        android:textColor="@color/blue"
        android:textSize="16sp"
        android:textAlignment="center"
        android:textStyle="bold" />

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_dashboard_menu_no_rounded"
            android:orientation="vertical"
            android:padding="16dp">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_qauliyah"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:cardBackgroundColor="@color/gray"
                app:contentPadding="16dp"
                app:cardCornerRadius="15dp"
                app:strokeWidth="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    android:background="@color/gray">

                    <ImageView
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:layout_marginEnd="8dp"
                        android:contentDescription="@string/txt_desc_sunnah_sunnah_qauliyah_dzikir_dan_doa_shalat"
                        android:src="@drawable/ic_doa" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/txt_sunnah_sunnah_quliyah_dzikir_dan_doa_shalat"
                        android:textColor="@color/blue"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_dzikir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:cardBackgroundColor="@color/gray"
                app:contentPadding="16dp"
                app:cardCornerRadius="15dp"
                app:strokeWidth="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    android:background="@color/gray">

                    <ImageView
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:layout_marginEnd="8dp"
                        android:contentDescription="@string/txt_desc_dzikir_setiap_saat"
                        android:src="@drawable/ic_time" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/txt_dzikir_setiap_saat"
                        android:textColor="@color/blue"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_dzikir_harian"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:cardBackgroundColor="@color/gray"
                app:contentPadding="16dp"
                app:cardCornerRadius="15dp"
                app:strokeWidth="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    android:background="@color/gray">

                    <ImageView
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:layout_marginEnd="8dp"
                        android:contentDescription="@string/txt_desc_dzikir_dan_doa_harian"
                        android:src="@drawable/ic_dzikir" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/txt_dzikir_dan_doa_harian"
                        android:textColor="@color/blue"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_dzikir_pagi_petang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:cardBackgroundColor="@color/gray"
                app:contentPadding="16dp"
                app:cardCornerRadius="15dp"
                app:strokeWidth="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    android:background="@color/gray">

                    <ImageView
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:layout_marginEnd="8dp"
                        android:contentDescription="@string/txt_desc_dzikir_pagi_petang"
                        android:src="@drawable/ic_pagi_petang" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/txt_dzikir_pagi_petang"
                        android:textColor="@color/blue"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <!--    region end-->
</LinearLayout>